--- a/templates/cards.html
+++ b/templates/cards.html
@@ -8,6 +8,7 @@
 
 
 {% block body %}
+<div id="container"></div>
 
 <!-- Mount Balloonicorn's card on to this element. -->
 <div id="balloonicorn"></div>
