--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,10 +5,10 @@
 {% block js %}
   <script src="/static/js/homepage.jsx" type="text/jsx"></script>
 {% endblock %}
-<img href='/static/img/shortstack-overflow.jpg'>
+
 
 {% block body %}
-<img href='/static/img/shortstack-overflow.jpg'>
+<img src='/static/img/shortstack-overflow.jpg'>
 <!-- Mount your react components on to this element. -->
 <div id="app"></div>
 
